feat(use jdk 22): use jdk 22 (#7)